--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ feature_row:
     alt: "Tool"
     title: "Tool"
     excerpt: "Introducing the tool that makes life simpler"
-    url: "/pages/tool.md/"
+    url: "/pages/tool/"
     btn_class: "btn--info"
     btn_label: "Learn more"
   - image_path: /assets/images/mm-free-feature.png
