--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@ excerpt: >
   Exploring the complexity of Modern Collaborative and Goal Oriented Processes.<br />
 feature_row:
   - image_path: /assets/images/mm-customizable-feature.png
-    alt: "Research"
-    title: "Research"
-    excerpt: "Get to know more about Untacit's R&D"
-    url: "/pages/research/"
+    alt: "Tame process overload"
+    title: "Tame process overload"
+    excerpt: "End-users typically interact with several..."
+    url: "/pages/research/#tame-process-overload"
     btn_class: "btn--info"
     btn_label: "Learn more"
   - image_path: /assets/images/mm-responsive-feature.png
-    alt: "Tool"
-    title: "Tool"
-    excerpt: "Introducing the tool that makes life simpler"
-    url: "/pages/tool/"
+    alt: "Leverage on knowledge"
+    title: "Leverage on knowledge"
+    excerpt: "A community of end-users interacting..."
+    url: "/pages/research/#leverage-on-knowledge"
     btn_class: "btn--info"
     btn_label: "Learn more"
   - image_path: /assets/images/mm-free-feature.png
-    alt: "Pricing"
-    title: "Pricing"
-    excerpt: "Our price plans for every size"
-    url: "/pages/pricing/"
+    alt: "Track and Manage Work"
+    title: "Track and Manage Work"
+    excerpt: "Users find themselves lost when..."
+    url: "/pages/research/#track-and-manage-work"
     btn_class: "btn--info "
     btn_label: "Learn more"      
 ---
